Current (trunk)
	- Add keywords functionnality for posts
	- Add new global variable for templates: BLOG_AUTHOR, BLOG_COPYRIGHT and
	BLOG_KEYWORDS
	- Permit to add new post without editing any file
	- Improve base theme
	- Add "top of the page" element
	- Add "migratefrom" command to migrate jskomment from an old domain
	- Delete useless theme to be more precise on some ones
	- Fix a problem with date in different languages
	- Improve iframe in posts
	- Default theme: minisch
	- Make Lua scripts translatables
	- Add technical documentation in code
	- Change template format: TMPL
	- Update tests to be compatible with Lua version
	- Improve display of message when compiling
	- Improve RSS factory by only generating those that's expected
	- Change posts generation bash script by a Lua script named process.lua
	- Fix bug on tags that have space in their name
	- Change BASE_URL to BLOG_URL

Version 0.2.1 (released 2013-05-31)
	- Improve Bootstrap theme with glyphicons
	- You can choose a "FLAVOR" for your theme in order to change colors
	- Add new commands: 'help' and 'list' that give all available commands
	- Add new commands: 'createpost' and 'add' in order to create a new post
	- Add new command: 'install'
	- Clean up meta data file (delete DATE useless field)
	- Add new command: 'theme' to create your theme
	- Add new command: 'version' to give your current version
	- Improve documentation
	- Permit to use a prefix for JSKOMMENT identification. If none, use default
	BASE_URL
	- Fix ELI to use ELI_API choosen by the user (if given)
	- Display new created postname for user to edit it

Version 0.2 (released 2013-04-17)
	- Add jskomment as optional comment system
	- Permit to customize jskomment comment system content
	- Permit to choose for each theme an optional CSS color file. This permit to
	  have a CSS to place all elements, then another one to adapt colors.
	- Check variable to be unique in templates
	- Update documentation
	- Statuses from identica