@@ -1,4 +1,5 @@
 Current (trunk)
+  - Permit to reverse list of posts with SORT parameter in configuration file
 	- Add keywords functionnality for posts
 	- Add new global variable for templates: BLOG_AUTHOR, BLOG_COPYRIGHT and
 	BLOG_KEYWORDS
